--- a/webscraper/scraper/services/config.ini
+++ b/webscraper/scraper/services/config.ini
@@ -1,10 +1,24 @@
 [config]
 base_url = https://twitter.com/
 
-[class]
-error = errorpage-body-content
-fullname = fullname ProfileNameTruncated-link u-textInheritColor js-nav
-bio_description = ProfileHeaderCard-bio u-dir
-li_followers = ProfileNav-item ProfileNav-item--followers
-span_followers = ProfileNav-value
-img_avatar = ProfileAvatar-image 
+[error]
+element = div
+class = errorpage-body-content
+
+[fullname]
+element = a
+class = fullname ProfileNameTruncated-link u-textInheritColor js-nav
+
+[bio_description]
+element = p
+class = ProfileHeaderCard-bio u-dir
+
+[followers]
+element1 = li
+element2 = span
+class1 = ProfileNav-item ProfileNav-item--followers
+class2 = ProfileNav-value
+
+[avatar]
+element = img
+class = ProfileAvatar-image 
