se estandariza API REST + refactoring

--- a/webscraper/scraper/services/config.ini
+++ b/webscraper/scraper/services/config.ini
@@ -2,23 +2,25 @@
 base_url = https://twitter.com/
 
 [error]
-element = div
+tag = div
 class = errorpage-body-content
 
 [fullname]
-element = a
+tag = a
 class = fullname ProfileNameTruncated-link u-textInheritColor js-nav
 
-[bio_description]
-element = p
+[bio-description]
+tag = p
 class = ProfileHeaderCard-bio u-dir
 
-[followers]
-element1 = li
-element2 = span
-class1 = ProfileNav-item ProfileNav-item--followers
-class2 = ProfileNav-value
+[followers-li]
+tag = li
+class = ProfileNav-item ProfileNav-item--followers
+
+[followers-span]
+tag = span
+class = ProfileNav-value
 
 [avatar]
-element = img
+tag = img
 class = ProfileAvatar-image 
